--- a/CSharpSnowBlazor/Client/CSharpSnowBlazor.Client.csproj
+++ b/CSharpSnowBlazor/Client/CSharpSnowBlazor.Client.csproj
@@ -6,9 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Blazor.Extensions.Canvas" Version="1.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-preview.1.21103.6" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-preview.1.21103.6" PrivateAssets="all" />
-	<PackageReference Include="MudBlazor" Version="5.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.2" PrivateAssets="all" />
+	<PackageReference Include="MudBlazor" Version="6.0.6" />
   </ItemGroup>
 
   <ItemGroup>
