--- a/CSharpSnowBlazor/Server/CSharpSnowBlazor.Server.csproj
+++ b/CSharpSnowBlazor/Server/CSharpSnowBlazor.Server.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.0-preview.1.21103.6" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.2" />
   </ItemGroup>
 
   <ItemGroup>
